# nc-coi-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt  vars.py
Adjacency/: adjMat.py  adjacencyFinder.py  nc-bg-adjacency.npz  nc-bg-index.csv  nc_bg_edges-more-info.csv  nc_bg_edges.csv
Census Data/: bg-vote-percentage-new.csv  bg_vote_percentages_full.csv  census_data.csv  census_data_cleaned.csv  census_data_part_2.csv  clean.py  collect.py  data.py  nc-elec-dist-2020.csv  vars.py
Graph/: Node.py  PCA.py  census_data_pc.csv  census_data_pca.npz  coi_mapping.csv  evaluation.py  graph.py
Graph/shapefiles/nc_bg/: tl_2023_37_bg.dbf  tl_2023_37_bg.shp.iso.xml  tl_2023_37_bg.shx
Map/: bg_to_cd_mapping.csv
Map/state_house_dists_2022/: 37_NC_SLDL22.txt:Zone.Identifier
Map/state_sen_dists_2022/: 37_NC_SLDU22.txt:Zone.Identifier
Map/tl_2023_37_bg/: tl_2023_37_bg.shp.ea.iso.xml
