
[project]
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "anyio==4.11.0",
    "anysqlite==0.0.5",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.4.0",
    "babel==2.17.0",
    "beautifulsoup4==4.14.2",
    "bleach==6.3.0",
    "blinker==1.9.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dep-logic==0.5.2",
    "distlib==0.4.0",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.20.0",
    "findpython==0.7.1",
    "fonttools==4.60.1",
    "fqdn==1.5.1",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "h11==0.16.0",
    "hishel==0.1.5",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "id==1.5.0",
    "idna==3.11",
    "igraph==1.0.0",
    "installer==0.7.0",
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "joblib==1.5.2",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter==1.1.1",
    "jupyter-console==6.6.3",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.10",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.4.9",
    "lark==1.3.1",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mistune==3.1.4",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "notebook==7.4.7",
    "notebook-shim==0.2.4",
    "numpy==2.3.4",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pbs-installer==2025.10.31",
    "pdm==2.26.1",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.1.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.23",
    "Pygments==2.19.2",
    "pyparsing==3.2.5",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-json-logger==4.0.0",
    "python-louvain==0.16",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "resolvelib==1.2.1",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.2.0",
    "rpds-py==0.28.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "Send2Trash==1.8.3",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "terminado==0.18.1",
    "texttable==1.7.0",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tomlkit==0.13.3",
    "torch==2.9.1",
    "torch-geometric==2.7.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triton==3.5.1",
    "truststore==0.10.4",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "unearth==0.18.1",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "virtualenv==20.35.4",
    "wcwidth==0.2.14",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "widgetsnbextension==4.0.15",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
